# game-of-life-qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
doc/: Doxyfile
qml/: CustomButton.qml  CustomScrollView.qml  CustomTextField.qml  GameBoard.qml  GameCell.qml  GameOptions.qml  Main.qml  Prova.qml  ShapeSelectorPopup.qml  ShapesModel.qml  StartButton.qml  WarningPopup.qml  WelcomeScreen.qml
src/: backend.cpp  backend.h  cell.cpp  cell.hpp  gameboard.cpp  gameboard.hpp  gamemanager.cpp  gamemanager.hpp  gameoptions.cpp  gameoptions.hpp  gamestatemachine.cpp  gamestatemachine.hpp  grid.cpp  grid.hpp  patterns.cpp  patterns.hpp  shapes.cpp  shapes.hpp
